correction check si url déjà présente + revu de la disposition des éléments + txtTag désormais tj visible + modif icone + ajout header à l'identique e twitter

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -36,15 +36,18 @@ html * {
 	margin: 0;
 }
 
-body {
-	background: #ffffff;
-	color: #333333;
+/*body*/
+div.wrapper
+{
+	/*background: #ffffff;
+	color: #333333;  */
 	margin: 0 auto;
 	max-width: 960px;
-	overflow-x: hidden; /* prevents box-shadow causing a horizontal scrollbar in firefox when viewport < 960px wide */
+    /* prevents box-shadow causing a horizontal scrollbar in firefox when viewport < 960px wide */
+	/*overflow-x: hidden;
 	   -moz-box-shadow: 0 0 0.3em #255b17;
 	-webkit-box-shadow: 0 0 0.3em #255b17;
-	        box-shadow: 0 0 0.3em #255b17;
+	        box-shadow: 0 0 0.3em #255b17;*/
 }
 
 #grailsLogo {
